fixed mobile view, extra padding from ros removed

--- a/client/src/containers/stockform/style.module.css
+++ b/client/src/containers/stockform/style.module.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-content: center;
     text-align: center;
+    margin:0
 }
 
 .button{
